--- a/about/index.html
+++ b/about/index.html
@@ -140,7 +140,7 @@
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><figure><img src="https://greengamma.github.io/portfolio/images/rene.jpg"/>
 </figure>
 
-<p>Data Science, Finance and the stock market are my passions. My name is René Kumsta and I have been working in the area of data analysis and data science field for the last couple of years. With a PhD in Finance, I have a strong passion for providing insights on (financial) data and generating meaningful technical reports. Having published three papers in academic journals, I am used to handling large data sets, researching and performing advanced analyses on them. Data extraction and transformation is completed with Python as well as data science libraries such as pandas, numpy, sklearn and seaborn.</p>
+<p>Data Science, Finance and the stock market are my passions. My name is René Kumsta and I have been working in the area of data analysis and data science field for the last couple years. With a PhD in Finance, I have a strong passion for providing insights on (financial) data and generating meaningful technical reports. Having published three papers in academic journals, I am used to handling large data sets, researching and performing advanced analyses on them. Data extraction and transformation is completed with Python as well as data science libraries such as pandas, numpy, sklearn and seaborn.</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
