--- a/contact/index.html
+++ b/contact/index.html
@@ -175,6 +175,15 @@
 <td style="text-align:left"><a href="https://www.kaggle.com/greengamma">https://www.kaggle.com/greengamma</a></td>
 </tr>
 <tr>
+<td style="text-align:left">Blog:</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td style="text-align:left"><a href="http://sequensis.de">http://sequensis.de</a></td>
+</tr>
+<tr>
 <td style="text-align:left">Website:</td>
 <td></td>
 <td></td>
